# nsweb

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  xmake.lua
cmake/: FindMPV.cmake  extra.cmake
live/: danmaku_live.cpp  danmaku_live.h  extract_messages.cpp  main.cpp  ws_utils.cpp
mongoose/: CMakeLists.txt
mongoose/examples/esp32/uart-bridge/main/: mongoose.c
mongoose/examples/file-upload-single-post/: mongoose.h
mongoose/examples/stm32/nucleo-f746zg-cube-baremetal/Core/Inc/: mongoose_custom.h
mongoose/examples/stm32/nucleo-f746zg-cube-baremetal/Core/Src/: main.c
mongoose/examples/stm32/nucleo-f746zg-cube-freertos-lwip/Core/Inc/: mongoose_custom.h
mongoose/examples/stm32/nucleo-f746zg-cube-freertos-lwip/Core/Src/: main.c
mongoose/examples/stm32/nucleo-f746zg-cube-freertos/Core/Inc/: mongoose_custom.h
mongoose/examples/stm32/nucleo-f746zg-cube-freertos/Core/Src/: main.c
scripts/: build_switch.sh
src/: nsweb.cpp  nsweb.hpp  socket_fun.cpp  socket_fun.hpp  tls_fun.cpp  tls_fun.hpp  url_fun.cpp  url_fun.hpp
test/: main.cpp
